# Iris

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  LICENSE  README-v0.2.0.md  README.md  cli.js  electron-builder.yml  index.html  makefile  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
example-note/: Note.md
fs-mod/: Cargo.toml  README.md  index.d.ts  index.js  package.json
fs-mod/src/: base_dir.rs  create_dir.rs  create_file.rs  file.rs  fs_delete.rs  fs_metadata.rs  fs_rename.rs  get_canonical_path.rs  is.rs  lib.rs  readfile.rs  walkdir.rs  write_to_file.rs
resources/: icon.icns
src/: app.ts  directory.ts  editor.ts  is-main.mts  listener.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: base_dir.rs  file.rs  get_canonical_path.rs  is.rs  lib.rs  main.rs  readfile.rs  walkdir.rs
src/assets/: classic-light.min.css  editor-dark.css  github-dark-highlight.css  github-light-highlight.css  global.css  prosemirror.css
src/event-listeners/: listeners.ts
src/file-directory-tree/: file-directory-nodes.ts  file-directory.ts
src/main/: index.ts  is-main.ts
src/milkdown/: milkdown-editor.ts
src/preload/: index.d.ts  index.ts  preload.d.ts  preload.mts
src/prosemirror/: pm_editor_node.ts
src/reading_mode/: reading_mode.ts
src/renderer/: app.ts  directory-main.ts  directory.ts  editor-main.ts  editor.ts  index.html  listener-main.ts  listener.ts  renderer.ts
test/: fs-mod.test.ts
v0.1.x/: .eslintrc.json  makefile  package-lock.json  package.json
(+178 files in other folders)
